rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__compare_operator.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (compare_operator),\n\"\n    a !~ '1';\n    a =~ '1';\n    a >< '1';\n    a >!< '1';\n    a == '1';\n    a != '1';\n    a > '1';\n    a < '1';\n    a >= '1';\n    a <= '1';\n    x() x 2;\n    \").into_iter().map(|\nstmt | stmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
a !~ [49]
a =~ [49]
a >< [49]
a >!< [49]
a == [49]
a != [49]
a > [49]
a < [49]
a >= [49]
a <= [49]
x(); X 2
