rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__if_stmt.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "parse_ok(stringify! (if_stmt), \"if (a) b; else c;\")"
snapshot_kind: text
---
[
    Statement {
        start: Token {
            kind: Keyword(
                If,
            ),
            position: (
                0,
                2,
            ),
        },
        end: Some(
            Token {
                kind: Semicolon,
                position: (
                    16,
                    17,
                ),
            },
        ),
        kind: If(
            Statement {
                start: Token {
                    kind: Ident(
                        Ident(
                            "a",
                        ),
                    ),
                    position: (
                        4,
                        5,
                    ),
                },
                end: Some(
                    Token {
                        kind: RightParen,
                        position: (
                            5,
                            6,
                        ),
                    },
                ),
                kind: Variable,
            },
            Statement {
                start: Token {
                    kind: Ident(
                        Ident(
                            "b",
                        ),
                    ),
                    position: (
                        7,
                        8,
                    ),
                },
                end: Some(
                    Token {
                        kind: Semicolon,
                        position: (
                            8,
                            9,
                        ),
                    },
                ),
                kind: Variable,
            },
            Some(
                Token {
                    kind: Keyword(
                        Else,
                    ),
                    position: (
                        10,
                        14,
                    ),
                },
            ),
            Some(
                Statement {
                    start: Token {
                        kind: Ident(
                            Ident(
                                "c",
                            ),
                        ),
                        position: (
                            15,
                            16,
                        ),
                    },
                    end: Some(
                        Token {
                            kind: Semicolon,
                            position: (
                                16,
                                17,
                            ),
                        },
                    ),
                    kind: Variable,
                },
            ),
        ),
    },
]
